Refactor server.md for janusgraph-server.sh
Fixes #2146

* add a starting a Janusgraph with janusgraph-server.sh
* moves the janusgraph.sh section into the installation.md
* add usage command to janusgraph-server.md
* remove section for standalone Gremlin Server as we started
with jg 0.6 to extend Gremlin Server with some extra features

Signed-off-by: Jan Jansen <jan.jansen@gdata.de>